added mymoney app changes